--- a/VIEW/css/style.css
+++ b/VIEW/css/style.css
@@ -64,6 +64,11 @@ a {
     transition: var(--transicion-rapida);
 }
 
+.mensaje_index{
+    font-size: 1.2rem;
+    margin-bottom: var(--espacio-lg);
+    color: var(--color-secundario);
+}
 ul {
     list-style: none;
 }
